--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,8 +11,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!-- Spotify Web Playback SDK -->
-  <script src="https://sdk.scdn.co/spotify-player.js"></script>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -33,6 +31,17 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+  <!-- Spotify Web Player SDK -->
+  <script src="https://sdk.scdn.co/spotify-player.js"></script>
+  <script>
+    // Initializes the Spotify Web Player SDK
+    window.onSpotifyWebPlaybackSDKReady = () => {
+
+      // window object added to the Spotify global variable so React has access to it
+      window.Spotify = Spotify;
+    }
+  </script>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
