Changed the display name h1 to spotify display name

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,6 +40,8 @@
 
       // window object added to the Spotify global variable so React has access to it
       window.Spotify = Spotify;
+      console.log('Spotify SDK working')
+
     }
   </script>
   <!--
